# docs/swagger.json
@@ -33,7 +33,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]字典管理"
+                    "Admin-字典管理"
                 ],
                 "summary": "根据类型获取字典数据",
                 "parameters": [
@@ -95,7 +95,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]字典管理"
+                    "Admin-字典管理"
                 ],
                 "summary": "获取字典类型列表",
                 "parameters": [
@@ -182,7 +182,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]字典管理"
+                    "Admin-字典管理"
                 ],
                 "summary": "创建字典类型",
                 "parameters": [
@@ -239,7 +239,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]字典管理"
+                    "Admin-字典管理"
                 ],
                 "summary": "获取字典类型详情",
                 "parameters": [
@@ -304,7 +304,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]字典管理"
+                    "Admin-字典管理"
                 ],
                 "summary": "更新字典类型",
                 "parameters": [
@@ -366,7 +366,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]字典管理"
+                    "Admin-字典管理"
                 ],
                 "summary": "删除字典类型",
                 "parameters": [
@@ -421,7 +421,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]游戏管理"
+                    "Admin-游戏管理"
                 ],
                 "summary": "获取游戏列表",
                 "parameters": [
@@ -562,7 +562,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]游戏管理"
+                    "Admin-游戏管理"
                 ],
                 "summary": "创建游戏",
                 "parameters": [
@@ -613,7 +613,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]游戏管理"
+                    "Admin-游戏管理"
                 ],
                 "summary": "获取游戏详情",
                 "parameters": [
@@ -672,7 +672,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]游戏管理"
+                    "Admin-游戏管理"
                 ],
                 "summary": "更新游戏",
                 "parameters": [
@@ -728,7 +728,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]游戏管理"
+                    "Admin-游戏管理"
                 ],
                 "summary": "删除游戏",
                 "parameters": [
@@ -772,7 +772,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]管理员认证"
+                    "Admin-管理员认证"
                 ],
                 "summary": "管理员登录",
                 "parameters": [
@@ -836,7 +836,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]管理员认证"
+                    "Admin-管理员认证"
                 ],
                 "summary": "管理员登出",
                 "responses": {
@@ -870,7 +870,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]菜单管理"
+                    "Admin-菜单管理"
                 ],
                 "summary": "获取菜单列表",
                 "parameters": [
@@ -955,7 +955,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]菜单管理"
+                    "Admin-菜单管理"
                 ],
                 "summary": "创建菜单",
                 "parameters": [
@@ -1006,7 +1006,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]菜单管理"
+                    "Admin-菜单管理"
                 ],
                 "summary": "获取菜单路由",
                 "responses": {
@@ -1055,7 +1055,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]菜单管理"
+                    "Admin-菜单管理"
                 ],
                 "summary": "获取菜单树",
                 "responses": {
@@ -1104,7 +1104,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]菜单管理"
+                    "Admin-菜单管理"
                 ],
                 "summary": "获取菜单详情",
                 "parameters": [
@@ -1169,7 +1169,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]菜单管理"
+                    "Admin-菜单管理"
                 ],
                 "summary": "更新菜单",
                 "parameters": [
@@ -1231,7 +1231,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]菜单管理"
+                    "Admin-菜单管理"
                 ],
                 "summary": "删除菜单",
                 "parameters": [
@@ -1286,7 +1286,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]厂商管理"
+                    "Admin-厂商管理"
                 ],
                 "summary": "获取游戏厂商列表",
                 "parameters": [
@@ -1367,7 +1367,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]厂商管理"
+                    "Admin-厂商管理"
                 ],
                 "summary": "创建游戏厂商",
                 "parameters": [
@@ -1424,7 +1424,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]厂商管理"
+                    "Admin-厂商管理"
                 ],
                 "summary": "获取游戏厂商详情",
                 "parameters": [
@@ -1489,7 +1489,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]厂商管理"
+                    "Admin-厂商管理"
                 ],
                 "summary": "更新游戏厂商",
                 "parameters": [
@@ -1551,7 +1551,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]厂商管理"
+                    "Admin-厂商管理"
                 ],
                 "summary": "删除游戏厂商",
                 "parameters": [
@@ -1606,7 +1606,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]管理员认证"
+                    "Admin-管理员认证"
                 ],
                 "summary": "创建管理员账号",
                 "parameters": [
@@ -1657,7 +1657,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "获取角色列表",
                 "parameters": [
@@ -1741,7 +1741,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "创建角色",
                 "parameters": [
@@ -1792,7 +1792,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "获取管理员角色信息",
                 "parameters": [
@@ -1859,7 +1859,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "分配管理员角色",
                 "parameters": [
@@ -1916,7 +1916,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "角色授权",
                 "parameters": [
@@ -1973,7 +1973,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "获取角色选择列表",
                 "responses": {
@@ -2022,7 +2022,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "获取角色详情",
                 "parameters": [
@@ -2087,7 +2087,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "更新角色",
                 "parameters": [
@@ -2149,7 +2149,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[Admin]角色管理"
+                    "Admin-角色管理"
                 ],
                 "summary": "删除角色",
                 "parameters": [
@@ -2199,7 +2199,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[API]用户认证"
+                    "System-用户认证"
                 ],
                 "summary": "用户登录",
                 "parameters": [
@@ -2260,7 +2260,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[API]用户认证"
+                    "System-用户认证"
                 ],
                 "summary": "用户注册",
                 "parameters": [
@@ -2326,7 +2326,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[API]用户认证"
+                    "System-用户认证"
                 ],
                 "summary": "获取用户信息",
                 "responses": {
@@ -3745,5 +3745,19 @@
             "name": "Authorization",
             "in": "header"
         }
-    }
+    },
+    "tags": [
+        {
+            "description": "后台管理相关接口，包含管理员认证、角色管理、菜单管理、字典管理、游戏管理等功能",
+            "name": "Admin"
+        },
+        {
+            "description": "系统功能相关接口，包含前台用户认证、用户管理等功能",
+            "name": "System"
+        },
+        {
+            "description": "前台网站相关接口，包含首页展示、内容管理等功能",
+            "name": "Web"
+        }
+    ]
 }
